Tracks list & Track properties (only instruments list so far)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <!-- OCTAVE SWITCHER -->
+    <TextView
+        android:id="@+id/octaveShift"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:textSize="30sp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/trackList"
+        app:layout_constraintEnd_toStartOf="@+id/trackList"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/octaveDown"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:padding="0dp"
+        android:text="@string/LeftArrow"
+        android:textSize="30sp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/octaveShift"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/octaveUp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:layout_marginEnd="12dp"
+        android:padding="0dp"
+        android:text="@string/RightArrow"
+        android:textSize="30sp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/trackList"
+        app:layout_constraintStart_toEndOf="@+id/octaveShift" />
+
+    <!-- TRACKS -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trackList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="100dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/track">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <!-- WHITE KEYS -->
     <LinearLayout
@@ -272,45 +308,5 @@
             android:layout_height="wrap_content"
             android:layout_weight="1.7" />
     </LinearLayout>
-
-    <!-- OCTAVE SWITCHER -->
-    <TextView
-        android:id="@+id/octaveShift"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:text="0"
-        android:textSize="30sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
-        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/octaveDown"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:padding="0dp"
-        android:text="@string/LeftArrow"
-        android:textSize="30sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/octaveShift"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/octaveUp"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:layout_marginEnd="12dp"
-        android:padding="0dp"
-        android:text="@string/RightArrow"
-        android:textSize="30sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
-        app:layout_constraintStart_toEndOf="@+id/octaveShift" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
