--- a/app/src/main/res/layout/track.xml
+++ b/app/src/main/res/layout/track.xml
@@ -13,7 +13,7 @@
         android:background="@null"
         android:scaleType="fitCenter"
         android:layout_margin="5dp"
-        app:srcCompat="@drawable/record_button"
+        app:srcCompat="@drawable/record_select"
         tools:ignore="ContentDescription" />
 
     <Button
