--- a/app/src/main/res/drawable/record_button.xml
+++ b/app/src/main/res/drawable/record_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/record"/>
-    <item android:drawable="@drawable/no_record" />
+    <item android:state_activated="true" android:drawable="@drawable/no_record"/>
+    <item android:drawable="@drawable/record" />
 </selector>
