--- a/app/src/main/res/layout/project.xml
+++ b/app/src/main/res/layout/project.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.midicryboard.FavouriteButton
+    <com.example.midicryboard.button.FavouriteButton
         android:id="@+id/favouriteButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/favourite_mark"
         tools:ignore="ContentDescription" />
 
-    <ImageButton
+    <com.example.midicryboard.button.DeleteButton
         android:id="@+id/deleteButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
